--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "imports-loader": "^0.6.4",
-    "script-loader": "^0.6.1",
+    "expose-loader": "^0.7.0",
     "webpack": "^1.12.2"
   }
 }
