--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   },
   "dependencies": {
     "angular": "1.4.7",
-    "babel": "^5.8.23",
-    "babel-polyfill": "^6.3.14",
+    "babel-polyfill": "6.3.14",
+    "babel-preset-es2015": "6.3.13",
+    "babel-register": "6.4.3",
     "ejs": "2.3.x",
     "express": "4.13.x",
     "jquery": "2.1.4"
   },
   "devDependencies": {
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "expose-loader": "^0.7.0",
-    "webpack": "^1.12.2"
+    "babel-core": "6.4.5",
+    "babel-loader": "6.2.1",
+    "expose-loader": "0.7.1",
+    "webpack": "1.12.12"
   }
 }
